# pdm-lite-template

./: README.txt  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.repo_name }}/: .env_  .envrc_  .gitignore_  .lvimrc  README.md  pdm.toml  ptpython_config.py_  pyproject.toml
{{ cookiecutter.repo_name }}/.ipython/profile_default/startup/: 50-custom.py
{{ cookiecutter.repo_name }}/.jupyter/: jupyter_lab_config.py
{{ cookiecutter.repo_name }}/.jupyter/lab/user-settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
{{ cookiecutter.repo_name }}/.jupyter/lab/user-settings/@jupyterlab/lsp-extension/: plugin.jupyterlab-settings
{{ cookiecutter.repo_name }}/.jupyter/lab/user-settings/@jupyterlab/notebook-extension/: panel.jupyterlab-settings  tracker.jupyterlab-settings
{{ cookiecutter.repo_name }}/.jupyter/lab/user-settings/@jupyterlab/terminal-extension/: plugin.jupyterlab-settings
{{ cookiecutter.repo_name }}/.jupyter/lab/user-settings/jupyterlab_code_formatter/: settings.jupyterlab-settings
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/: __init__.py  _version.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/helpers/: json_helper.py  path_helper.py  pickle_helper.py  pyproject_helper.py
