[project]
name = "{{ cookiecutter.package_name }}"
dynamic = ["version"]
description = "{{ cookiecutter.project_desc }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
dependencies = [
    "dill>=0.3",
    "more-itertools>=10",
    "ujson>=5",
    "pyjson5>=1",
    "fsspec[git,http,https,sftp,ssh,libarchive]>=2024",
    "python-dateutil>=2",
]
requires-python = "{{ cookiecutter.python_version_range }}"
readme = "README.md"
license = { text = "{{ cookiecutter.license }}" }

[project.optional-dependencies]
cbinding = [
    "cython>=3",
    "pybind11>=2",
]
dataframe = [
    "pandas[performance,computation,parquet,fss,compression]>=2",
    "polars[pandas,numpy,pyarrow,fsspec]>=0.20",
    "clevercsv[full]>=0.8",
]
duckdb = [
    "duckdb>=0.10",
]
ml = [
    "scikit-learn>=1",
    "xgboost>=2",
    "catboost>=1",
]
numerical = [
    "numpy>=1",
    "numba>=0.59",
    "numexpr>=2",
    "bottleneck>=1",
    "jax[cpu]>=0.4",
    "mpmath[gmpy]>=1",
]
pydantic = [
    "pydantic[email]>=2",
    "pydantic-extra-types>=2",
]
sympy = [
    "sympy>=1",
]
tui = [
    "rich>=13",
    "textual>=0.52",
]
all = [
    "{{ cookiecutter.package_name }}[cbinding,dataframe,duckdb,ml,numerical,pydantic,sympy,tui]"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/{{ cookiecutter.package_name }}/_version.py"

[tool.pdm.resoution]
respect-source-order = true
allow-prereleases = true

[tool.pdm.dev-dependencies]
nvim = [
    "pynvim>=0.5",
]
test = [
    "pytest>=8",
    "pytest-xdist>=3",
    "pytest-randomly>=3",
    "pytest-cov>=4",
    "pytest-beartype>=0.0.2",
    "hypothesis[array_api,cli,codemods,dateutil,dpcontracts,lark,numpy,pytz]>=6",
]
dev = [
    "mypy>=1",
    "pylint>=3",
    "pyright>=1",
    "jedi-language-server>=0.41",
    "black>=24",
    "bandit>=1",
    "reorder-python-imports>=3",
    "flake8-pyproject>=1",
    "mypy-extensions>=1",
    "pysnooper>=1",
    "icecream>=2",
    "beartype>=0.17",
    "dpcontracts>=0.6",
    "coverage>=7",
    "pyproject-metadata>=0.7",
]
type = [
    "types-ujson>=5",
    "types-python-dateutil>=2",
    "types-pillow>=10",
]
repl = [
    "ipython>=8",
    "ptpython>=3",
]
jupyter = [
    "jupyterlab>=4",
    "ipykernel>=6",
    "ipywidgets>=8",
    "jupyterlab-code-formatter>=2",
    "jupyterlab-vim>=4",
    "jupyterlab-git>=0.50",
    "jupyterlab-execute-time>=3",
    "nbconvert[webpdf]>=7",
    "jupytext>=1",
]
plotting = [
    "matplotlib>=3",
    "seaborn>=0.13",
    "plotext>=5",
    "plotly>=5",
]
eda = [
    # "ydata-profiling[notebook,unicode]>=4",  # only works for python < 3.12
    "sweetviz>=2",
]
argcomplete = [
    "argcomplete>=3",
]

# [[tool.pdm.source]]
# name = "torchcpu"
# url = "https://download.pytorch.org/whl/cpu"
# verify_ssl = true

# [[tool.pdm.source]]
# name = "torchrocm"
# url = "https://download.pytorch.org/whl/rocm5.7"
# verify_ssl = true

#[[tool.pdm.source]]
#name = "pypi"
#url = "https://pypi.org/simple"
#verify_ssl = true

[tool.pylint]
jobs = 0
extension-pkg-allow-list = ["ujson", "pydantic"]
recursive = "yes"
suggestion-mode = "yes"
unsafe-load-any-extension = "yes"

[tool.pylint.FORMAT]
max-line-length = 128

[tool.pylint."MESSAGE CONTROL"]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "invalid-name",
    "too-few-public-methods",
    "line-too-long",
    "import-outside-toplevel",
    "wrong-import-position",
    "wrong-import-order",
    "ungrouped-imports",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-branches",
    "too-many-statements",
    "too-many-locals",
    "too-many-return-statements",
    "too-many-nested-blocks",
    "too-many-boolean-expressions",
    "trailing-newlines",
]

[tool.black]
line-length = 128
target-version = ["{{ cookiecutter.black_python_target }}"]

[tool.mypy]
python_version = "{{ cookiecutter.mypy_python_target }}"
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]

follow_imports = "normal"
ignore_missing_imports = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pyright]
typeCheckingMode = "strict"
reportMissingModuleSource = "none"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportGeneralTypeIssues = "none"
reportUnusedExpression = "none"
reportConstantRedefinition = "none"
reportUntypedFunctionDecorator = "none"

[tool.flake8]
max_line_length = 128
show_source = true
ignore = ["E501", "W503", "W391"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B403", "B301", "B101", "B606"]
